# particlesSystem

./: CMakeLists.txt  README.md  main.cpp  particles
source/: app.cpp  app.hpp  math.cpp  math.hpp  particle.cpp  particle.hpp  renderer.cpp  renderer.hpp
